--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,105 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+.toolbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  background-color: #015c97;
+  color: white;
+  font-weight: 600;
+  font-size: 35px;
+}
+
+.padding-std {
+  padding: 40px;
+}
+
+.content {
+  margin: 60px 0 0 40px;
+}
+
+th.mat-header-cell {
+  color: #015c97 !important;
+}
+
+table.customer-table {
+  width: 100%;
+}
+
+table.filter-table {
+  width: 60%;
+}
+
+table.filter-table > th.mat-header-cell,
+td.mat-cell,
+td.mat-footer-cell {
+  border: none !important;
+  border-bottom-style: none;
+}
+
+/* Absolute Center Spinner */
+.loading-indicator {
+  position: fixed;
+  z-index: 999;
+  height: 2em;
+  width: 2em;
+  overflow: show;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+/* Transparent Overlay */
+.loading-indicator:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
+  line-height: 28px;
+}
+
+.mat-button-toggle {
+  color: #015c97;
+}
+
+.mat-button-toggle-checked {
+  background-color: #015c97;
+  color: #fff !important;
+}
+
+.margin-top-20 {
+  margin-top: 20px;
+}
+
+.btn-transparent {
+  background-color: transparent;
+  border: none;
+  color: #015c97;
+}
+
+.btn-cursor {
+  cursor: pointer;
+}
