--- a/src/app/components/filter-container/filter-container.component.html
+++ b/src/app/components/filter-container/filter-container.component.html
@@ -1,7 +1,88 @@
-<mat-button-toggle value="left" aria-label="Text align left" (change)="onShowFilterChange($event)">
-    <mat-icon>filter_alt</mat-icon>{{filterBtnLabel}}
-</mat-button-toggle>
-<div class="margin-top-20" *ngIf="displayedColumns.length">
+<span class="float-left">
+    <mat-button-toggle value="left" aria-label="Text align left" (change)="onShowFilterChange($event)">
+        <mat-icon>filter_alt</mat-icon>{{filterBtnLabel}}
+    </mat-button-toggle>
+</span>
+<span class="float-right margin-right-200">
+    <button mat-raised-button color="primary" (click)="onApplyFilter()">Apply Filter</button>
+</span>
+<form #form="ngForm" class="padding-20">
+    <mat-list role="list">
+        <mat-list-item role="listitem" class="margin-top-20">
+            <mat-form-field appearance="standard">
+                <mat-label>Numeric Filter Field</mat-label>
+                <mat-select (selectionChange)="selectColumnFilter($event, 'field', 0)">
+                    <mat-option *ngFor="let item of fieldFilterNumericData" [value]="item.field">
+                        {{item.header}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="standard">
+                <mat-label>Operator</mat-label>
+                <mat-select (selectionChange)="selectColumnFilter($event, 'operator', 0)">
+                    <mat-option *ngFor="let item of filterMap['filter-0'].operators" [value]="item">
+                        {{item}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="filterMap['filter-0'].showOperator2">
+                <mat-label>Range Operator</mat-label>
+                <mat-select (selectionChange)="selectColumnFilter($event, 'operator1', 0)">
+                    <mat-option *ngFor="let item of rangeFilter" [value]="item">
+                        {{item}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="standard">
+                <mat-label>Value</mat-label>
+                <input matInput (change)="onValueChange($event, 'value1', 0)">
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="filterMap['filter-0'].showOperator2">
+                <mat-label>Range Operator</mat-label>
+                <mat-select (selectionChange)="selectColumnFilter($event, 'operator2', 0)">
+                    <mat-option *ngFor="let item of rangeFilter" [value]="item">
+                        {{item}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="filterMap['filter-0'].showOperator2">
+                <mat-label>Value</mat-label>
+                <input matInput (change)="onValueChange($event, 'value2', 0)">
+            </mat-form-field>
+        </mat-list-item>
+        <mat-list-item role="listitem" class="margin-top-20">
+            <mat-form-field appearance="standard">
+                <mat-label>Categorical Filter Field</mat-label>
+                <mat-select (selectionChange)="selectColumnFilter($event, 'field', 1)">
+                    <mat-option *ngFor="let item of fieldFilterCategoricalData" [value]="item.field">
+                        {{item.header}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="standard">
+                <mat-label>Operator</mat-label>
+                <mat-select (selectionChange)="selectColumnFilter($event, 'operator1', 1)">
+                    <mat-option *ngFor="let item of filterMap['filter-1'].operators" [value]="item">
+                        {{item}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="valueMultiSelect">
+                <mat-label>Value</mat-label>
+                <mat-select multiple (selectionChange)="selectColumnFilter($event, 'value1', 1)">
+                    <mat-option *ngFor="let item of valueFilterDataCategorical" [value]="item">
+                        {{item}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="!valueMultiSelect">
+                <mat-label>Value</mat-label>
+                <input matInput (change)="onValueChange($event, 'value', 1)">
+            </mat-form-field>
+        </mat-list-item>
+    </mat-list>
+</form>
+<!-- <div class="margin-top-20" *ngIf="displayedColumns.length">
     <table mat-table [dataSource]="dataSource" class="filter-table">
         <ng-container matColumnDef="Field">
             <th mat-header-cell *matHeaderCellDef>Field</th>
@@ -63,4 +144,4 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-</div>
+</div> -->
