--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -42,7 +42,7 @@
 
 /* Transparent Overlay */
 .loading-indicator:before {
-  content: '';
+  content: "";
   display: block;
   position: fixed;
   top: 0;
@@ -50,4 +50,13 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+.min-width-500 {
+  min-width: 500px;
+}
+
+.btn-margin-std {
+  display: block;
+  margin: 40px 15px;
 }
