--- a/src/app/components/chart-container/chart-container.component.html
+++ b/src/app/components/chart-container/chart-container.component.html
@@ -1,15 +1,9 @@
-<mat-tab-group>
-    <mat-tab label="Bar Plot">
-        <div class="chart-container">
-            <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
-                [legend]="barChartLegend" [type]="'bar'">
-            </canvas>
-        </div>
-    </mat-tab>
-    <mat-tab label="Scatter Plot">
-        <div class="chart-container">
-            <canvas baseChart [datasets]="scatterChartData" [options]="scatterChartOptions" [type]="scatterChartType">
-            </canvas>
-        </div>
-    </mat-tab>
-</mat-tab-group>
+<div class="chart-container" *ngIf="chartType === 'bar'">
+    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
+        [legend]="barChartLegend" [type]="'bar'">
+    </canvas>
+</div>
+<div class="chart-container" *ngIf="chartType === 'scatter'">
+    <canvas baseChart [datasets]="scatterChartData" [options]="scatterChartOptions" [type]="scatterChartType">
+    </canvas>
+</div>
