--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -22,6 +22,10 @@
   padding: 40px;
 }
 
+.padding-side-20 {
+  padding: 0 20px;
+}
+
 .content {
   margin: 60px 0 0 40px;
 }
@@ -65,4 +69,12 @@
   display: inline-block;
   width: 60%;
   padding: 25px 50px;
+}
+
+.margin-left-20 {
+  margin-left: 20px;
+}
+
+.table-label-filter {
+  min-width: 160px;
 }
